--- a/src/contact.njk
+++ b/src/contact.njk
@@ -1,12 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eleventy Practice</title>
-</head>
-<body>
-  <h1>Contact page</h1>
-</body>
-</html>
+---
+title: "Eleventy Practice"
+layout: "base.njk"
+---
+
+<h2 class="heading-contact">Would you like to get in touch?</h2>
+<p class="heading-contact">I'm always open to new opportunities and projects. </p>
+
+<form class="form" name="contact" action="/success" method="POST" data-netlify="true">
+  <div class="form-section">
+    <label class="form-label" for="name">Name</label>
+    <input class="form-input" name="name" type="text" id="name" required="true">
+  </div>
+  <div class="form-section">
+    <label class="form-label" for="email">Email</label>
+    <input class="form-input" name="email" type="email"  id="email" required="true">
+  </div>
+  <div class="form-section">
+    <label class="form-label" for="message">Message</label>
+    <textarea class="form-input" name="message" id="message" rows="4" required="true"></textarea>
+  </div>
+    <button class="form-button" type="submit">Let's talk</button>
+</form>
