--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,17 +1,19 @@
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   list-style: none;
 }
 
+html,
 body {
-  min-height: 100vh;
+  height: 100%;
 }
 
-.content,
-.footer {
-  height: 90vh;
+.content {
+  height: 95vh;
   padding: 20px;
   width: 90vw;
   margin: 0 auto;
@@ -25,6 +27,7 @@ a {
   display: flex;
   padding-bottom: 20px;
   justify-content: space-between;
+  align-items: center;
 }
 
 .header-links {
@@ -42,4 +45,38 @@ a {
 
 .footer {
   text-align: center;
+}
+
+/* Contact Form */
+.form {
+  max-width: 36rem;
+  margin: 4rem auto;
+  border-radius: 0.25rem;
+}
+
+.form-section {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.5rem;
+}
+
+.form-label {
+  display: block;
+  margin-bottom: 0.25rem;
+  font-weight: 500;
+}
+
+.form-input {
+  display: block;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+}
+
+.form-button {
+  display: block;
+  width: 100%;
+  padding: 0.5rem 2rem;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
 }
