--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ title }}</title>
     <link rel="stylesheet" href="{{'/css/style.css' | url | safe}}" />
-    <!-- <script src="./index.js" defer></script> -->
+    <script src="{{'/scripts/index.js'}}" defer></script>
   </head>
   <body>
   <div class="content">
