Add profile and tech partials to home page

--- a/src/index.njk
+++ b/src/index.njk
@@ -3,4 +3,5 @@ title: "Eleventy practice"
 layout: "base.njk"
 ---
 
-<h1>{{ title }} Home Page</h1>
+{% include "profile.njk" %}
+{% include "technologies.njk" %}
